Four pieces in portfolio

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                                     <div class="cbp-l-caption-alignCenter">
                                         <div class="cbp-l-caption-body">
                                             <div class="btn-group">
-                                                <a href="projects/project1.html" class="cbp-singlePage btn text-lowercase" rel="nofollow" data-cbp-singlePage="projects">more info</a>
-                                                <a href="https://www.youtube.com/watch?v=3wbvpOIIBQA" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="GoPro: HERO3+ Black Edition<br>by GoPro">view video</a>
+                                                <a href="projects/project1.html" class="cbp-singlePage btn text-lowercase" rel="nofollow" data-cbp-singlePage="projects">Avaa</a>
+                                                <a href="https://www.youtube.com/watch?v=3wbvpOIIBQA" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="GoPro: HERO3+ Black Edition<br>by GoPro">Lataa pdf</a>
                                             </div>
                                         </div>
                                     </div>
@@ -130,8 +130,8 @@
                                     <div class="cbp-l-caption-alignCenter">
                                         <div class="cbp-l-caption-body">
                                             <div class="btn-group">
-                                                <a href="projects/project2.html" class="cbp-singlePage btn btn-sm text-lowercase" rel="nofollow" data-cbp-singlePage="projects">more info</a>
-                                                <a href="contents/images/portfolios/1400x900/01.jpg" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="Granite Stationery: Documents Perspective<br>by Aaron Covrett">view larger</a>
+                                                <a href="projects/project2.html" class="cbp-singlePage btn btn-sm text-lowercase" rel="nofollow" data-cbp-singlePage="projects">Avaa</a>
+                                                <a href="contents/images/portfolios/1400x900/01.jpg" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="Granite Stationery: Documents Perspective<br>by Aaron Covrett">Lataa pdf</a>
                                             </div>
                                         </div>
                                     </div>
@@ -147,20 +147,20 @@
                         <div class="cbp-item-wrap">
                             <div class="cbp-caption">
                                 <div class="cbp-caption-defaultWrap">
-                                    <img src="contents/images/portfolios/600x600/3.jpg" alt="img5"> </div>
+                                    <img src="contents/images/portfolios/tablettiseuranta-3.png" alt="img5"> </div>
                                 <div class="cbp-caption-activeWrap">
                                     <div class="cbp-l-caption-alignCenter">
                                         <div class="cbp-l-caption-body">
                                             <div class="btn-group">
-                                                <a href="projects/project3.html" class="cbp-singlePage btn btn-sm text-lowercase" rel="nofollow" data-cbp-singlePage="projects">more info</a>
-                                                <a href="http://vimeo.com/1084537" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="Big Buck Bunny<br>by Blender Foundation">view video</a>
+                                                <a href="projects/project3.html" class="cbp-singlePage btn btn-sm text-lowercase" rel="nofollow" data-cbp-singlePage="projects">Avaa</a>
+                                                <a href="http://vimeo.com/1084537" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="Big Buck Bunny<br>by Blender Foundation">Lataa pdf</a>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="cbp-l-grid-projects-title uppercase text-center uppercase text-center">Tablettiseuranta</div>
-                            <div class="cbp-l-grid-projects-desc uppercase text-center uppercase text-center">Shakkisovellus</div>
+                            <div class="cbp-l-grid-projects-desc uppercase text-center uppercase text-center">Digitaalinen shakkipöytäkirja</div>
                         </div>
                     </div>
                     <!--/portfolio 3-->
@@ -169,20 +169,20 @@
                         <div class="cbp-item-wrap">
                             <div class="cbp-caption">
                                 <div class="cbp-caption-defaultWrap">
-                                    <img src="contents/images/portfolios/600x600/4.jpg" alt="img6"> </div>
+                                    <img src="contents/images/portfolios/aikavahti-3.jpg"  alt="img6"> </div>
                                 <div class="cbp-caption-activeWrap">
                                     <div class="cbp-l-caption-alignCenter">
                                         <div class="cbp-l-caption-body">
                                             <div class="btn-group">
-                                                <a href="projects/project4.html" class="cbp-singlePage btn btn-sm text-lowercase" rel="nofollow" data-cbp-singlePage="projects">more info</a>
-                                                <a href="contents/images/portfolios/1400x900/02.jpg" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="Granite Stationery: Resume Perspective<br>by Aaron Covrett">view larger</a>
+                                                <a href="projects/project4.html" class="cbp-singlePage btn btn-sm text-lowercase" rel="nofollow" data-cbp-singlePage="projects">Avaa</a>
+                                                <a href="http://vimeo.com/1084537" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="Big Buck Bunny<br>by Blender Foundation">Lataa pdf</a>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="cbp-l-grid-projects-title uppercase text-center uppercase text-center">Project Four</div>
-                            <div class="cbp-l-grid-projects-desc uppercase text-center uppercase text-center">Identity / Graphic</div>
+                            <div class="cbp-l-grid-projects-title uppercase text-center uppercase text-center">Aikavahti</div>
+                            <div class="cbp-l-grid-projects-desc uppercase text-center uppercase text-center">Ajanseurantasovellus työpöydälle</div>
                         </div>
                     </div>
                     <!--/portfolio 4-->
@@ -208,75 +208,10 @@
                         </div>
                     </div>
                     <!--/portfolio 5-->
-                    <!--portfolio 6-->
-                    <div class="cbp-item logos">
-                        <div class="cbp-item-wrap">
-                            <div class="cbp-caption">
-                                <div class="cbp-caption-defaultWrap">
-                                    <img src="contents/images/portfolios/600x600/6.jpg" alt="img8"> </div>
-                                <div class="cbp-caption-activeWrap">
-                                    <div class="cbp-l-caption-alignCenter">
-                                        <div class="cbp-l-caption-body">
-                                            <div class="btn-group">
-                                                <a href="projects/project6.html" class="cbp-singlePage btn btn-sm text-lowercase" rel="nofollow" data-cbp-singlePage="projects">more info</a>
-                                                <a href="contents/images/portfolios/1400x900/03.jpg" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="Granite Stationery: Resume Close-Up<br>by Aaron Covrett">view larger</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="cbp-l-grid-projects-title uppercase text-center uppercase text-center">Project Six</div>
-                            <div class="cbp-l-grid-projects-desc uppercase text-center uppercase text-center">Logos / Graphic</div>
-                        </div>
-                    </div>
-                    <!--/portfolio 6-->
-                    <!--portfolio 7-->
-                    <div class="cbp-item logos">
-                        <div class="cbp-item-wrap">
-                            <div class="cbp-caption">
-                                <div class="cbp-caption-defaultWrap">
-                                    <img src="contents/images/portfolios/600x600/7.jpg" alt="img9"> </div>
-                                <div class="cbp-caption-activeWrap">
-                                    <div class="cbp-l-caption-alignCenter">
-                                        <div class="cbp-l-caption-body">
-                                            <div class="btn-group">
-                                                <a href="projects/project7.html" class="cbp-singlePage btn btn-sm text-lowercase" rel="nofollow" data-cbp-singlePage="projects">more info</a>
-                                                <a href="http://vimeo.com/1084537" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="Big Buck Bunny<br>by Blender Foundation">view video</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="cbp-l-grid-projects-title uppercase text-center uppercase text-center">Project Seven</div>
-                            <div class="cbp-l-grid-projects-desc uppercase text-center uppercase text-center">Logos / Graphic</div>
-                        </div>
-                    </div>
-                    <!--/portfolio 7-->
-                    <!--portfolio 8-->
-                    <div class="cbp-item web-design">
-                        <div class="cbp-item-wrap">
-                            <div class="cbp-caption">
-                                <div class="cbp-caption-defaultWrap">
-                                    <img src="contents/images/portfolios/600x600/8.jpg" alt="img10"> </div>
-                                <div class="cbp-caption-activeWrap">
-                                    <div class="cbp-l-caption-alignCenter">
-                                        <div class="cbp-l-caption-body">
-                                            <div class="btn-group">
-                                                <a href="projects/project8.html" class="cbp-singlePage btn btn-sm text-lowercase" rel="nofollow" data-cbp-singlePage="projects">more info</a>
-                                                <a href="contents/images/portfolios/1400x900/01.jpg" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="Granite Stationery: Documents Perspective<br>by Aaron Covrett">view larger</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="cbp-l-grid-projects-title uppercase text-center uppercase text-center">Project Eight</div>
-                            <div class="cbp-l-grid-projects-desc uppercase text-center uppercase text-center">Web Design / Graphic</div>
-                        </div>
-                    </div>
-                    <!--/portfolio 8-->
                 </div>
                 <!-- /portfolio Grid-->
                 <!--portfolio loadMore-->
+                <!--
                 <div id="js-loadMore-juicy-projects" class="cbp-l-loadMore-button">
                     <a href="loadMorePortfolio.html" class="cbp-l-loadMore-link hvr-underline-from-center text-uppercase" rel="nofollow">
                         <span class="cbp-l-loadMore-defaultText">load more</span>
@@ -284,6 +219,7 @@
                         <span class="cbp-l-loadMore-noMoreLoading">not load more</span>
                     </a>
                 </div>
+                -->
                 <!-- /portfolio loadMore-->
             </div>
             <!-- /portfolio -->
