--- a/projects/project2.html
+++ b/projects/project2.html
@@ -52,6 +52,7 @@
              <!-- List-->
             <ul class="cbp-l-project-details-list">
                 <li><strong>Asiakas</strong>Sales Hybrid Oy</li>
+                 <li><strong>Asiakkaan yhteyshenkilö</strong>Thomas Pälikkö</li>
                 <li><strong>Kesto</strong>1.1.2017 -></li>
                 <li><strong>Vastuualueet</strong>Projektin tekninen toteutus</li>
             </ul>
@@ -64,39 +65,7 @@
         <!--/Detail List-->
     </div>
     <!--/Container-->
-    <!--Container 2-->
-    <div class="cbp-l-project-container">
-        <div class="cbp-l-project-related">
-            <!--Title-->
-            <div class="cbp-l-project-desc-title">
-                <span>Related Projects</span>
-            </div>
-            <!--/Title-->
-            <!--Related List-->
-            <ul class="cbp-l-project-related-wrap">
-                <li class="cbp-l-project-related-item">
-                    <a href="projects/project6.html" class="cbp-singlePage cbp-l-project-related-link " rel="nofollow" data-cbp-singlePage="projects">
-                        <img src="contents/images/portfolios/600x600/1.jpg" alt="">
-                        <div class="cbp-l-project-related-title">Project Title</div>
-                    </a>
-                </li>
-                <li class="cbp-l-project-related-item">
-                    <a href="projects/project7.html" class="cbp-singlePage cbp-l-project-related-link " rel="nofollow" data-cbp-singlePage="projects">
-                        <img src="contents/images/portfolios/600x600/2.jpg" alt="">
-                        <div class="cbp-l-project-related-title">Project Title</div>
-                    </a>
-                </li>
-                <li class="cbp-l-project-related-item">
-                    <a href="projects/project8.html" class="cbp-singlePage cbp-l-project-related-link " rel="nofollow" data-cbp-singlePage="projects">
-                        <img src="contents/images/portfolios/600x600/4.jpg" alt="">
-                        <div class="cbp-l-project-related-title">Project Title</div>
-                    </a>
-                </li>
-            </ul>
-            <!--/Related List-->
-        </div>
-    </div>
-    <!--/Container 2-->
+
     <br>
     <br>
     <br> 
