--- a/projects/project4.html
+++ b/projects/project4.html
@@ -1,24 +1,24 @@
 <div class="portfolio-content">
     <!--Title and Subtitle-->
-    <div class="cbp-l-project-title">Project Four</div>
-    <div class="cbp-l-project-subtitle">by lorem ipsum</div>
+    <div class="cbp-l-project-title">Aikavahti</div>
+    <div class="cbp-l-project-subtitle">Tuntiseuranta-appi työpöydälle</div>
     <!--/Title and Subtitle-->
     <!--Slider-->
     <div class="cbp-slider">
         <ul class="cbp-slider-wrap">
             <li class="cbp-slider-item">
-                <a href="contents/images/portfolios/1400x900/01.jpg" class="cbp-lightbox">
-                    <img src="contents/images/portfolios/1400x900/01.jpg" alt=""> 
+                <a href="contents/images/portfolios/aikavahti-1.jpg" class="cbp-lightbox">
+                    <img src="contents/images/portfolios/aikavahti-1.jpg"  alt=""> 
                 </a>
             </li>
             <li class="cbp-slider-item">
-                <a href="contents/images/portfolios/1400x900/02.jpg" class="cbp-lightbox">
-                    <img src="contents/images/portfolios/1400x900/02.jpg" alt=""> 
+                <a href="contents/images/portfolios/aikavahti-2.jpg"  class="cbp-lightbox">
+                    <img src="contents/images/portfolios/aikavahti-2.jpg"  alt=""> 
                 </a>
             </li>
             <li class="cbp-slider-item">
-                <a href="contents/images/portfolios/1400x900/03.jpg" class="cbp-lightbox">
-                    <img src="contents/images/portfolios/1400x900/03.jpg" alt=""> 
+                <a href="contents/images/portfolios/aikavahti-3.jpg"  class="cbp-lightbox">
+                    <img src="contents/images/portfolios/aikavahti-3.jpg"  alt=""> 
                 </a>
             </li>
         </ul>
@@ -29,23 +29,26 @@
         <!--Description-->
         <div class="cbp-l-project-desc">
             <div class="cbp-l-project-desc-title">
-                <span>Project Description</span>
+                <span>Projektin kuvaus</span>
             </div>
-            <div class="cbp-l-project-desc-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, cumque, earum blanditiis incidunt minus commodi consequatur provident quae. Nihil, alias, vel consequatur ab aliquam aspernatur optio harum facilis excepturi mollitia autem
-                voluptas cum ex veniam numquam quia repudiandae in iure. Assumenda, vel provident molestiae perferendis officia commodi asperiores earum sapiente inventore quam deleniti mollitia consequatur expedita quaerat natus praesentium beatae aut
-                ipsa non ex ullam atque suscipit ut dignissimos magnam!</div>
+            <div class="cbp-l-project-desc-text">Aikavahti on Windows -ja Linux-ympäristöihin asennettava työpöytäohjelma, jolla voi kiireinen, kunnianhimoinen yrittäjä voi kirjata työtuntejaan ja seurata ajankäyttöään.<br><br>
+
+            Aikavahti ei ole tavanomainen tuntiseurantasovellus; Aikavahdin ytimessä on korkea kustomoitavuus ja <i>erittäin monipuoliset</i> tilastot, joita käyttäjä voi itse monipuolistaa ja jatkojalostaa suoraan käyttöliittymästä käsin.
+            <br><br>
+            Nollaversio IT kehitti Aikavahdin omaan tarpeeseen keväällä 2016. Sovellus pohjautuu Electron-alustaan.
+            </div>
         </div>
         <!--/Description-->
         <!--/Detail List-->
         <div class="cbp-l-project-details">
             <div class="cbp-l-project-details-title">
-                <span>Project Details</span>
+                <span>Projektin tiedot</span>
             </div>
              <!-- List-->
             <ul class="cbp-l-project-details-list">
-                <li><strong>Client</strong>John Doe</li>
-                <li><strong>Date</strong>22 December 2016</li>
-                <li><strong>Categories</strong>Logo, Graphic</li>
+                <li><strong>Asiakas</strong>Nollaversio IT (oma projekti)</li>
+                <li><strong>Kesto</strong>Tammikuu 2016 - Huhtikuu 2016</li>
+                <li><strong>Vastuualueet</strong>Tekninen toteutus</li>
             </ul>
              <!--/List-->
             <a href="https://wrapbootstrap.com/?ref=themebang" target="_blank" class="cbp-l-project-details-visit btn red uppercase">visit the site</a>
