Five items in portfolio

--- a/index.html
+++ b/index.html
@@ -191,20 +191,20 @@
                         <div class="cbp-item-wrap">
                             <div class="cbp-caption">
                                 <div class="cbp-caption-defaultWrap">
-                                    <img src="contents/images/portfolios/600x600/5.jpg" alt="img7"> </div>
+                                    <img src="contents/images/portfolios/spacescroller-1.png" alt="img7"> </div>
                                 <div class="cbp-caption-activeWrap">
                                     <div class="cbp-l-caption-alignCenter">
                                         <div class="cbp-l-caption-body">
                                             <div class="btn-group">
-                                                <a href="projects/project5.html" class="cbp-singlePage btn btn-sm text-lowercase" rel="nofollow" data-cbp-singlePage="projects">more info</a>
-                                                <a href="https://www.youtube.com/watch?v=3wbvpOIIBQA" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="GoPro: HERO3+ Black Edition<br>by GoPro">view video</a>
+                                                <a href="projects/project5.html" class="cbp-singlePage btn btn-sm text-lowercase" rel="nofollow" data-cbp-singlePage="projects">Avaa</a>
+                                                <a href="https://youtu.be/nJKTUnDSlVw" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="SpaceScroller demovideo">Katso esittelyvideo</a>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="cbp-l-grid-projects-title uppercase text-center uppercase text-center">Project Five</div>
-                            <div class="cbp-l-grid-projects-desc uppercase text-center uppercase text-center">Web Design / Graphic</div>
+                            <div class="cbp-l-grid-projects-title uppercase text-center uppercase text-center">SpaceScroller</div>
+                            <div class="cbp-l-grid-projects-desc uppercase text-center uppercase text-center">HTML5-peli gamepad-tuella</div>
                         </div>
                     </div>
                     <!--/portfolio 5-->
