--- a/projects/project5.html
+++ b/projects/project5.html
@@ -1,24 +1,19 @@
 <div class="portfolio-content">
     <!--Title and Subtitle-->
-    <div class="cbp-l-project-title">Project Five</div>
-    <div class="cbp-l-project-subtitle">by lorem ipsum</div>
+    <div class="cbp-l-project-title">SpaceScroller</div>
+    <div class="cbp-l-project-subtitle">HTML5-peli gamepad-tuella</div>
     <!--/Title and Subtitle-->
     <!--Slider-->
     <div class="cbp-slider">
         <ul class="cbp-slider-wrap">
             <li class="cbp-slider-item">
-                <a href="contents/images/portfolios/1400x900/01.jpg" class="cbp-lightbox">
-                    <img src="contents/images/portfolios/1400x900/01.jpg" alt=""> 
+                <a href="contents/images/portfolios/spacescroller-2.jpg"  class="cbp-lightbox">
+                    <img src="contents/images/portfolios/spacescroller-2.jpg"  alt=""> 
                 </a>
             </li>
             <li class="cbp-slider-item">
-                <a href="contents/images/portfolios/1400x900/02.jpg" class="cbp-lightbox">
-                    <img src="contents/images/portfolios/1400x900/02.jpg" alt=""> 
-                </a>
-            </li>
-            <li class="cbp-slider-item">
-                <a href="contents/images/portfolios/1400x900/03.jpg" class="cbp-lightbox">
-                    <img src="contents/images/portfolios/1400x900/03.jpg" alt=""> 
+                <a href="contents/images/portfolios/spacescroller-3.jpg" class="cbp-lightbox">
+                    <img src="contents/images/portfolios/spacescroller-3.jpg" alt=""> 
                 </a>
             </li>
         </ul>
@@ -29,63 +24,38 @@
         <!--Description-->
         <div class="cbp-l-project-desc">
             <div class="cbp-l-project-desc-title">
-                <span>Project Description</span>
+                <span>Projektin kuvaus</span>
             </div>
-            <div class="cbp-l-project-desc-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, cumque, earum blanditiis incidunt minus commodi consequatur provident quae. Nihil, alias, vel consequatur ab aliquam aspernatur optio harum facilis excepturi mollitia autem
-                voluptas cum ex veniam numquam quia repudiandae in iure. Assumenda, vel provident molestiae perferendis officia commodi asperiores earum sapiente inventore quam deleniti mollitia consequatur expedita quaerat natus praesentium beatae aut
-                ipsa non ex ullam atque suscipit ut dignissimos magnam!</div>
+            <div class="cbp-l-project-desc-text">SpaceScroller on HTML5- ja Javascript-teknologioihin perustuva vanhan ajan sidescroller-peli.
+            <br>
+            <br>
+            Peli pohjautuu Phaser-alustaan, ja tukee peliohjaimien käyttöä. Pelissä on kahden pelaajan multiplayer-moodi (co-op). 
+            <br><br>
+            Katso <a href="https://youtu.be/nJKTUnDSlVw" target="_blank">demovideo</a> pelistä.
+            <br><br>
+            Peli on Nollaversio IT:n toinen täysimittainen HTML5-peli, ja muistuttaa tyylilajiltaan Nollaversio IT:n esikoispeliä <a href="https://www.youtube.com/watch?v=E6qTIa0wuwE" target="_blank">SpaceBombers</a>.
+
+            </div>
+
         </div>
         <!--/Description-->
         <!--/Detail List-->
         <div class="cbp-l-project-details">
             <div class="cbp-l-project-details-title">
-                <span>Project Details</span>
+                <span>Projektin tiedot</span>
             </div>
              <!-- List-->
             <ul class="cbp-l-project-details-list">
-                <li><strong>Client</strong>John Doe</li>
-                <li><strong>Date</strong>22 December 2016</li>
-                <li><strong>Categories</strong>Logo, Graphic</li>
+                <li><strong>Asiakas</strong>Nollaversio IT (oma projekti)</li>
+                <li><strong>Kesto</strong>Marraskuu 2015 - Joulukuu 2015</li>
+                <li><strong>Vastuualueet</strong>Projektin tekninen toteutus</li>
             </ul>
-             <!--/List-->
-            <a href="https://wrapbootstrap.com/?ref=themebang" target="_blank" class="cbp-l-project-details-visit btn red uppercase">visit the site</a>
+            
         </div>
         <!--/Detail List-->
     </div>
     <!--/Container-->
-    <!--Container 2-->
-    <div class="cbp-l-project-container">
-        <div class="cbp-l-project-related">
-            <!--Title-->
-            <div class="cbp-l-project-desc-title">
-                <span>Related Projects</span>
-            </div>
-            <!--/Title-->
-            <!--Related List-->
-            <ul class="cbp-l-project-related-wrap">
-                <li class="cbp-l-project-related-item">
-                    <a href="projects/project6.html" class="cbp-singlePage cbp-l-project-related-link " rel="nofollow" data-cbp-singlePage="projects">
-                        <img src="contents/images/portfolios/600x600/1.jpg" alt="">
-                        <div class="cbp-l-project-related-title">Project Title</div>
-                    </a>
-                </li>
-                <li class="cbp-l-project-related-item">
-                    <a href="projects/project7.html" class="cbp-singlePage cbp-l-project-related-link " rel="nofollow" data-cbp-singlePage="projects">
-                        <img src="contents/images/portfolios/600x600/2.jpg" alt="">
-                        <div class="cbp-l-project-related-title">Project Title</div>
-                    </a>
-                </li>
-                <li class="cbp-l-project-related-item">
-                    <a href="projects/project8.html" class="cbp-singlePage cbp-l-project-related-link " rel="nofollow" data-cbp-singlePage="projects">
-                        <img src="contents/images/portfolios/600x600/4.jpg" alt="">
-                        <div class="cbp-l-project-related-title">Project Title</div>
-                    </a>
-                </li>
-            </ul>
-            <!--/Related List-->
-        </div>
-    </div>
-    <!--/Container 2-->
+
     <br>
     <br>
     <br> 
