--- a/about-me.html
+++ b/about-me.html
@@ -1,32 +1,44 @@
 <div class="portfolio-content">
-    <div class="cbp-l-project-title">JOHN DOE</div>
-    <div class="cbp-l-project-subtitle">WEB DESIGNER / PHOTOGRAPHER</div>
-    <img src="contents/images/john-doe.jpg" class="center-block img-rounded" alt="John Doe" width="180" />
+    <div class="cbp-l-project-title">Jussi Hämäläinen / Nollaversio IT</div>
+    <div class="cbp-l-project-subtitle">Yrittäjä, ohjelmoija</div>
+    <img src="contents/images/john-doe2.jpg" class="center-block img-rounded" alt="John Doe" width="180" />
     <!--Container-->
     <div class="cbp-l-project-container">
         <!--Description-->
         <div class="cbp-l-project-desc">
             <div class="cbp-l-project-desc-title">
-                <span>Biography</span>
+                <span>Esittely</span>
             </div>
-            <div class="cbp-l-project-desc-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, cumque, earum blanditiis incidunt minus commodi consequatur provident quae. Nihil, alias, vel consequatur ab aliquam aspernatur optio harum facilis excepturi mollitia autem
-                voluptas cum ex veniam numquam quia repudiandae in iure. Assumenda, vel provident molestiae perferendis officia commodi asperiores earum sapiente inventore quam deleniti mollitia consequatur expedita quaerat natus praesentium beatae aut
-                ipsa non ex ullam atque suscipit ut dignissimos magnam!</div>
+            <div class="cbp-l-project-desc-text">
+                Nollaversio IT on vuonna 2011 (tuolloin nimellä Vaahtokarkki IT) perustettu yhden miehen IT-paja.
+                <br><br>
+                Firman alkuperäinen erikoistuminen oli nettisivujen rakennus. Taitojen ja kokemuksen karttuessa ensisijaiseksi erikoistumiseksi tuli backend-kehitys <i>Laravel</i>- ja <i>Node.js</i> -teknologioita hyödyntäen. 
+
+                <br><br>
+                Vaikka pääpaino on backendin puolella, Nollaversio IT on vuosien varrella kehittynyt edustamaan *jack-of-all-trades* -lähestymistä ohjelmointiin. Frontend-kehityksen puolella vahvuusalue on <a href="https://vuejs.org/" target="_blank">Vue.js</a> ja applikaatiologiikan ohjelmointi javascriptillä.
+                <br><br>
+                Voit ottaa minuun yhteyttä sähköpostitse (jussi@nollaversio.fi) tai puhelimitse (040 935 1405). Sosiaalisessa mediassa pyörin harvakseltaan, lähinnä <a href="https://twitter.com/jussi_ha?lang=en" target="_blank">Twitterissä</a>. 
+                <br><br>
+                Muista lukaista myös <a href="https://www.nollaversio.fi/blog/public/">blogiani</a>, joka sisältää näkemyksiäni ja havaintojani liittyen projekteihini ja vaativan web-kehitykseen ylipäätänsä.
+
+                
+            </div>
         </div>
         <!--/Description-->
         <!--Project Details-->
         <div class="cbp-l-project-details">
             <div class="cbp-l-project-details-title">
-                <span>I AM</span>
+                <span>Tiedot</span>
             </div>
             <!--List-->
             <ul class="cbp-l-project-details-list">
-                <li><strong>Name</strong>John Doe</li>
-                <li><strong>Date of birth</strong>January 01, 1985</li>
-                <li><strong>Address</strong>1234 Street Road City Name</li>
-                <li><strong>Email</strong>your.name@email.com</li>
-                <li><strong>Phone</strong>(123) 456-7890</li>
-                <li><strong>Skype</strong>John_Doe</li>
+                <li><strong>Nimi</strong>Jussi Hämäläinen</li>
+                <li><strong>Koulutus</strong>Ylioppilas</li>
+                <li><strong>Ikä</strong>30 vuotta</li>
+                <li><strong>Toimisto-osoite</strong>Hyttipojankuja 2, 02780 Espoo</li>
+                <li><strong>Email</strong>jussi@nollaversio.fi</li>
+                <li><strong>Phone</strong>040 935 1405</li>
+
             </ul>
             <!--/List-->
         </div>
@@ -36,85 +48,31 @@
     <!--Container 2-->
     <div class="cbp-l-project-container">
             <div class="cbp-l-project-desc-title">
-                <span>Professional Skills</span>
+                <span>Ammattitaito</span>
             </div>
             <!--Skills-->
             <div class="cbp-l-project-desc-text">
+                <ul>
                 <!--Skills 1-->
-                <span>PHOTOSHOP</span>
-                <div class="progress pror-bor-gey">
-                  <div class="progress-bar progress-bar-gey" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
-                </div>
-                <!--/Skills 1-->
-                <!--Skills 2-->
-                 <span>ILLUSTRATOR</span>
-                <div class="progress pror-bor-gey">
-                  <div class="progress-bar progress-bar-gey" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
-                </div>
-                <!--/Skills 2-->
-                <!--Skills 3-->
-                 <span>INDESIGN</span>
-                <div class="progress pror-bor-gey">
-                  <div class="progress-bar progress-bar-gey" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
-                </div>
-                <!--/Skills 3-->
-                <br />
-                <!--Skills 4 -->
-                <span> HTML/CSS</span>
-                <div class="progress pror-bor-black">
-                  <div class="progress-bar progress-bar-black" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
-                </div>
-                <!--/Skills 4-->
-                <!--Skills 5-->
-                 <span>JAVASCRIPT</span>
-                <div class="progress pror-bor-black">
-                  <div class="progress-bar progress-bar-black" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
-                </div>
-                <!--/Skills 5-->
-                <!--Skills 6-->
-                <span> PHP/MYSQL</span>
-                <div class="progress pror-bor-black">
-                  <div class="progress-bar progress-bar-black" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
-                </div>
-                <!--/Skills 6-->
-                <br />
-                <!--Skills 7-->
-                 <span>RESPONSIBLE</span>
-                <div class="progress pror-bor-gey">
-                  <div class="progress-bar progress-bar-gey" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
-                </div>
-                <!--/Skills 7-->
-                <!--Skills 8-->
-                <span> CREATIVE</span>
-                <div class="progress pror-bor-gey">
-                  <div class="progress-bar progress-bar-gey" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"> </div>
-                </div>
-                <!--/Skills 8-->
-                <!--Skills 9-->
-                 <span>MULTITASKING</span>
-                <div class="progress pror-bor-gey">
-                  <div class="progress-bar progress-bar-gey" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"> </div>
-                </div>
+                <li><span>Git / versionhallinta:</span> Erinomainen <br>
+</li>         
+                <li><span>Ohjelmistoarkkitehtuurit:</span> Erinomainen <br>
+</li>                <li><span>Node.js:</span> Erinomainen <br></li>
+                <li><span>Laravel:</span> Erinomainen <br>
+                <li><span>Tietokannat:</span> Hyvä <br>
+</li>                <li><span>Vue.js:</span> Hyvä <br></li>
+</li>                <li><span>Frontend-kehitys:</span> Hyvä <br></li>
+                <li><span>Mobiilikehitys (hybrid):</span> Hyvä <br></li>
+                <li><span>Visuaalinen silmä:</span> Toivoton <br></li>
+
+                </ul>
+
+
                 <!--/Skills 9-->
             </div>
             <!--/Skills-->
     </div>
     <!--/Container 2-->
-    <!--Container 3-->
-    <div class="cbp-l-project-container">
-        <!--Title-->
-        <div class="cbp-l-project-desc-title">
-            <span>EXPERIENCE</span>
-        </div>
-        <!--/Title-->
-        <!--Text-->
-        <div class="cbp-l-project-desc-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, cumque, earum blanditiis incidunt minus commodi consequatur provident quae. Nihil, alias, vel consequatur ab aliquam aspernatur optio harum facilis excepturi mollitia autem
-            voluptas cum ex veniam numquam quia repudiandae in iure. Assumenda, vel provident molestiae perferendis officia commodi asperiores earum sapiente inventore quam deleniti mollitia consequatur expedita quaerat natus praesentium beatae aut
-            ipsa non ex ullam atque suscipit ut dignissimos magnam!
-        </div>
-        <!--/Text-->
-    </div>
-    <!--/Container 3-->
+
     <br><br><br> 
 </div>
