--- a/index.html
+++ b/index.html
@@ -37,14 +37,16 @@
                 <div data-filter="*" class="cbp-filter-item list-group-item logo">
                     <img width="160" src="contents/images/logo.png" alt="img"/>
                 </div>
-                <a href="about-me.html" class="cbp-singlePage list-group-item hvr-underline-from-left text-uppercase" data-cbp-singlePage="myCustomSinglePage1">About Me</a>
-                <a href="typography.html" class="cbp-singlePage list-group-item hvr-underline-from-left text-uppercase" data-cbp-singlePage="myCustomSinglePage2">Typography</a>
+                <a href="about-me.html" class="cbp-singlePage list-group-item hvr-underline-from-left text-uppercase" data-cbp-singlePage="myCustomSinglePage1">Esittely</a>
+                <a href="https://www.nollaversio.fi/blog/public/" class="list-group-item hvr-underline-from-left text-uppercase">Blogi</a>
+                <!--
                 <div data-filter="*" class="cbp-filter-item list-group-item hvr-underline-from-left text-uppercase"> All Portfolio </div>
                 <div data-filter=".movie" class="cbp-filter-item list-group-item hvr-underline-from-left text-uppercase"> Movie </div>
                 <div data-filter=".identity" class="cbp-filter-item list-group-item hvr-underline-from-left text-uppercase"> Identity </div>
                 <div data-filter=".web-design" class="cbp-filter-item list-group-item hvr-underline-from-left text-uppercase"> Web Design</div>
                 <div data-filter=".graphic" class="cbp-filter-item list-group-item hvr-underline-from-left text-uppercase"> Graphic</div>
                 <div data-filter=".logos" class="cbp-filter-item list-group-item hvr-underline-from-left text-uppercase"> Logo</div>
+                -->
                 <!--Contact-->
                 <div class="list-group-item">
                     <address>
@@ -230,7 +232,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="hidden-xs col-sm-3 col-md-4">
-                        <small class="footer-small">2017 © &nbsp; Made with love by ThemeBang</small>
+                        <small class="footer-small">2017 © &nbsp; Nollaversio IT</small>
                     </div>
                     <div class="col-xs-12 col-sm-9 col-md-8">
                         <!--Address -->
@@ -244,8 +246,8 @@
                                     <i aria-hidden="true" data-toggle="modal" data-target="#map" class="glyphicon glyphicon-map-marker"></i>
                             </address>
                             <address>
-                                <strong>Your Name</strong><br>
-                                <a href="mailto:#">your.name@email.com</a>
+                                <strong>Jussi Hämäläinen / Nollaversio IT</strong><br>
+                                <a href="mailto:#">jussi@nollaversio.fi</a>
                             </address>
                         </div>
                         <!-- /Address -->
