--- a/projects/project1.html
+++ b/projects/project1.html
@@ -37,6 +37,8 @@
             <br>
             <br>
             Nollaversio IT toimii projektissa frontend-kehittäjänä. Vastuualueena on applikaation ydintoimintojen, etenkin mobiililaitteilla käytettävän animaatio- ja piirtotyökalun kehittäminen. 
+            <br><br>
+            Videoesittely CoPlays-applikaatiosta löytyy <a href="https://www.youtube.com/watch?v=S2ZRwSl6KiY" target="_blank">täältä</a>.
             </div>
         </div>
         <!--/Description-->
@@ -48,7 +50,6 @@
              <!-- List-->
             <ul class="cbp-l-project-details-list">
                 <li><strong>Asiakas</strong>Coplays Oy</li>
-                <li><strong>Asiakkaan yhteyshenkilö</strong>Kalle Palokankare</li>
                 <li><strong>Kesto</strong>1.7.2017 -> </li>
                 <li><strong>Vastuualueet</strong>Frontend-kehitys, mobiilikehitys</li>
             </ul>
