--- a/projects/project2.html
+++ b/projects/project2.html
@@ -41,6 +41,8 @@
             <br>
             <br>
             Nollaversio IT toimii projektin päävastuullisena kehittäjänä, sekä frontend- että backend-puolella. Käytettyjä teknologioita ovat mm. Laravel, NodeJs, VueJs ja Amazon AWS Lambda.
+            <br><br>
+            Lyhyt esittelyvideo projektin lomake-editorin käyttöön löytyy <a href="https://youtu.be/JEu7GAR8JsA" target="_blank">täältä</a>.
             </div>
         </div>
         <!--/Description-->
