--- a/projects/project3.html
+++ b/projects/project3.html
@@ -37,6 +37,8 @@
             <br>
             Nollaversio IT toimi projektin vetovastuullisena kehittäjänä. Nollaversio IT tuotti sekä mobiililaitteilla toimivan web-applikaation että backend-järjestelmän (NodeJs), joka välittää siirtoja pelaajilta katsojille. Järjestelmän katsoja-sovellus on nähtävissä <a href="http://shakki.nollaversio.fi/seuranta/limbo" target="_blank">täällä</a>.
             <br>
+            <br>
+            Videoesittely katsoja-sovelluksen käytöstä löytyy <a href="https://youtu.be/jpiuTVWBJ24" target="_blank">täältä</a>.
 
             </div>
         </div>
