--- a/projects/project4.html
+++ b/projects/project4.html
@@ -36,6 +36,8 @@
             Aikavahti ei ole tavanomainen tuntiseurantasovellus; Aikavahdin ytimessä on korkea kustomoitavuus ja <i>erittäin monipuoliset</i> tilastot, joita käyttäjä voi itse monipuolistaa ja jatkojalostaa suoraan käyttöliittymästä käsin.
             <br><br>
             Nollaversio IT kehitti Aikavahdin omaan tarpeeseen keväällä 2016. Sovellus pohjautuu Electron-alustaan.
+            <br><br>
+            Ohjelman lyhyt videoesittely <a href="https://www.youtube.com/watch?v=zwb0OFPluzc" target="_blank">täällä</a>.
             </div>
         </div>
         <!--/Description-->
