--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Neuer - Creative Portfolio Template</title>
-        <meta name="description" content="Neuer is a responsive portfolio template for creative people.">
-        <meta name="author" content="ThemeBang">
-        <meta name="designer" content="ThemeBang">
-        <meta name="reply-to" content="themebang@gmail.com">
-        <meta name="copyright" content="(c) 2017 ThemeBang - www.themebang.com">
+        <title>Nollaversio IT - portfolio</title>
+        <meta name="description" content="Nollaversio IT on yhden miehen IT-yritys keskittyen vaativaan web-ohjelmointiin">
+        <meta name="author" content="Nollaversio IT">
+        <meta name="designer" content="Nollaversio IT">
+        <meta name="reply-to" content="jussi@nollaversio.fi">
+        <meta name="copyright" content="(c) 2017 Nollaversio IT">
         <meta name="robots" content="index, follow">
         <!--Verifitication-->
         <meta name="google-site-verification" content="">
@@ -82,14 +82,8 @@
                     </div>
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                       <ul class="nav navbar-nav js-filters-juicy-projects">
-                        <li class="cbp-singlePage list-group-item text-center hvr-underline-from-center text-uppercase"><a href="about-me.html" class="cbp-singlePage" data-cbp-singlePage="myCustomSinglePage1">About Me</a></li>
-                        <li class="cbp-singlePage list-group-item text-center hvr-underline-from-center text-uppercase"><a href="typography.html" class="cbp-singlePage" data-cbp-singlePage="myCustomSinglePage2">Typography</a></li>
-                        <li data-filter="*" class="cbp-filter-item list-group-item text-center hvr-underline-from-center text-uppercase"> All Portfolio</li>
-                        <li data-filter=".movie" class="cbp-filter-item list-group-item text-center hvr-underline-from-center text-uppercase"> Movie </li>
-                        <li data-filter=".identity" class="cbp-filter-item list-group-item text-center hvr-underline-from-center text-uppercase"> Identity </li>
-                        <li data-filter=".web-design" class="cbp-filter-item list-group-item text-center hvr-underline-from-center text-uppercase"> Web Design</li>
-                        <li data-filter=".graphic" class="cbp-filter-item list-group-item text-center hvr-underline-from-center text-uppercase"> Graphic</li>
-                        <li data-filter=".logos" class="cbp-filter-item list-group-item text-center hvr-underline-from-center text-uppercase"> Logo</li>
+                        <li class="cbp-singlePage list-group-item text-center hvr-underline-from-center text-uppercase"><a href="about-me.html" class="cbp-singlePage" data-cbp-singlePage="myCustomSinglePage1">Esittely</a></li>
+                        <li class="list-group-item text-center hvr-underline-from-center text-uppercase"><a href="https://www.nollaversio.fi/blog/public/">Blogi</a></li>
                       </ul>
                     </div>
                   </div>
@@ -111,7 +105,7 @@
                                         <div class="cbp-l-caption-body">
                                             <div class="btn-group">
                                                 <a href="projects/project1.html" class="cbp-singlePage btn text-lowercase" rel="nofollow" data-cbp-singlePage="projects">Avaa</a>
-                                                <a href="https://www.youtube.com/watch?v=3wbvpOIIBQA" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="GoPro: HERO3+ Black Edition<br>by GoPro">Lataa pdf</a>
+                                                <a href="https://www.youtube.com/watch?v=S2ZRwSl6KiY" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="Coplays">Videoesittely</a>
                                             </div>
                                         </div>
                                     </div>
@@ -133,7 +127,7 @@
                                         <div class="cbp-l-caption-body">
                                             <div class="btn-group">
                                                 <a href="projects/project2.html" class="cbp-singlePage btn btn-sm text-lowercase" rel="nofollow" data-cbp-singlePage="projects">Avaa</a>
-                                                <a href="contents/images/portfolios/1400x900/01.jpg" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="Granite Stationery: Documents Perspective<br>by Aaron Covrett">Lataa pdf</a>
+                                                <a href="https://youtu.be/JEu7GAR8JsA" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="Lomake-editori">Videoesittely</a>
                                             </div>
                                         </div>
                                     </div>
@@ -155,7 +149,7 @@
                                         <div class="cbp-l-caption-body">
                                             <div class="btn-group">
                                                 <a href="projects/project3.html" class="cbp-singlePage btn btn-sm text-lowercase" rel="nofollow" data-cbp-singlePage="projects">Avaa</a>
-                                                <a href="http://vimeo.com/1084537" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="Big Buck Bunny<br>by Blender Foundation">Lataa pdf</a>
+                                                <a href="https://youtu.be/jpiuTVWBJ24" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="Tablettiseuranta">Videoesittely</a>
                                             </div>
                                         </div>
                                     </div>
@@ -177,7 +171,7 @@
                                         <div class="cbp-l-caption-body">
                                             <div class="btn-group">
                                                 <a href="projects/project4.html" class="cbp-singlePage btn btn-sm text-lowercase" rel="nofollow" data-cbp-singlePage="projects">Avaa</a>
-                                                <a href="http://vimeo.com/1084537" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="Big Buck Bunny<br>by Blender Foundation">Lataa pdf</a>
+                                                <a href="https://www.youtube.com/watch?v=zwb0OFPluzc" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="Aikavahti">Videoesittely</a>
                                             </div>
                                         </div>
                                     </div>
@@ -199,7 +193,7 @@
                                         <div class="cbp-l-caption-body">
                                             <div class="btn-group">
                                                 <a href="projects/project5.html" class="cbp-singlePage btn btn-sm text-lowercase" rel="nofollow" data-cbp-singlePage="projects">Avaa</a>
-                                                <a href="https://youtu.be/nJKTUnDSlVw" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="SpaceScroller demovideo">Katso esittelyvideo</a>
+                                                <a href="https://youtu.be/nJKTUnDSlVw" class="cbp-lightbox btn btn-sm text-lowercase btn-right" data-title="SpaceScroller demovideo">Videoesittely</a>
                                             </div>
                                         </div>
                                     </div>
