--- a/projects/project2.html
+++ b/projects/project2.html
@@ -54,7 +54,7 @@
              <!-- List-->
             <ul class="cbp-l-project-details-list">
                 <li><strong>Asiakas</strong>Sales Hybrid Oy</li>
-                 <li><strong>Asiakkaan yhteyshenkilö</strong>Thomas Pälikkö</li>
+                 <li><strong>Yhteyshenkilö</strong>Thomas Pälikkö</li>
                 <li><strong>Kesto</strong>1.1.2017 -></li>
                 <li><strong>Vastuualueet</strong>Projektin tekninen toteutus</li>
             </ul>
