--- a/projects/project3.html
+++ b/projects/project3.html
@@ -50,8 +50,8 @@
             </div>
              <!-- List-->
             <ul class="cbp-l-project-details-list">
-                <li><strong>Asiakas</strong>Suomen Shakkiliitto</li>
-                <li><strong>Asiakkaan yhteyshenkilö</strong>Marko Tauriainen</li>
+                <li><strong>Asiakas</strong>Suomen Shakkiliitto ry.</li>
+                <li><strong>Yhteyshenkilö</strong>Marko Tauriainen</li>
                 <li><strong>Kesto</strong>12.12.2016 - 1.3.2017</li>
                 <li><strong>Vastuualueet</strong>Tekninen toteutus</li>
             </ul>
